Refactor shell scripts to improve MG2D path resolution and update Java classpath